--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>IT Hype</title>
 </head>
 <body>
- <h1 style="text-align: center">IT Hype Site</h1>
+ <h1 style="text-align: center">IT Hype site</h1>
 </body>
 </html>
