--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>IT Hype</title>
 </head>
 <body>
-<a href="privacy.html">Политика конфиденциальности</a>
+<a href="/privacy.html">Политика конфиденциальности</a>
 </body>
 </html>
