--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 <a href="/privacy.html">Политика конфиденциальности</a>
+<a href="/wipe.html">Удаление данных пользователя</a>
 </body>
 </html>
