--- a/support.html
+++ b/support.html
@@ -11,7 +11,7 @@
 <body>
 <div class="wrapper">
     <div class="container">
-        <p><a href="mailto:help@it-hype.com">Задавайте вопросы по электронной почте</a></p>
+        <p><a href="mailto:help@it-hype.com">Задавайте вопросы по электронной почте help@it-hype.com</a></p>
     </div>
 </div>
 </body>
