--- a/jobs.html
+++ b/jobs.html
@@ -2,15 +2,15 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://bit.ly/3mcj65X">
+    <meta http-equiv="refresh" content="0; url=http://s.k12.ru/WorkForMoney">
     <script type="text/javascript">
-        window.location.href = "https://bit.ly/3mcj65X"
+        window.location.href = "http://s.k12.ru/WorkForMoney"
     </script>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>Jobs</title>
 </head>
 <body>
 <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-If you are not redirected automatically, follow this <a href='https://bit.ly/3mcj65X'>link</a>.
+If you are not redirected automatically, follow this <a href='http://s.k12.ru/WorkForMoney'>link</a>.
 </body>
 </html>
