--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-border-2 u-border-grey-90 u-clearfix u-grey-90 u-header u-header" id="sec-f35c"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-border-2 u-border-grey-90 u-clearfix u-grey-90 u-header u-header" id="sec-f35c"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-align-right u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XS">
           <div class="menu-collapse" style="font-size: 1.125rem; letter-spacing: 0px; font-weight: 700;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="#" style="background-image: none;">
