--- a/Home.html
+++ b/Home.html
@@ -53,7 +53,7 @@
       </div></header>
     <section class="skrollable u-align-center u-clearfix u-grey-90 u-hidden-lg u-section-1" id="sec-a33b">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center u-text u-text-default u-text-white u-text-1">GAME DEVELOPER</h1>
+        <h1 class="u-align-center u-text u-text-default u-text-white u-text-1">GAME DEVELOPMENT</h1>
       </div>
     </section>
     
