--- a/wipe.html
+++ b/wipe.html
@@ -26,7 +26,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-border-2 u-border-grey-90 u-clearfix u-grey-90 u-header u-header" id="sec-f35c"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-align-left u-border-2 u-border-grey-90 u-clearfix u-grey-90 u-header u-header" id="sec-f35c"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-align-right u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XS">
           <div class="menu-collapse" style="font-size: 1.125rem; letter-spacing: 0px; font-weight: 700;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="#" style="background-image: none;">
@@ -51,6 +51,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
+        <img class="u-align-left u-image u-image-default u-image-1" src="images/LOGOTYPE21.png" alt="" data-image-width="266" data-image-height="171" data-href="http://it-hype.com">
       </div></header>
     <section class="u-align-center u-clearfix u-section-1" id="sec-3c82">
       <div class="u-clearfix u-sheet u-sheet-1">
