--- a/wipe.html
+++ b/wipe.html
@@ -53,7 +53,7 @@
         </nav>
         <img class="u-align-left u-image u-image-default u-image-1" src="images/LOGOTYPE21.png" alt="" data-image-width="266" data-image-height="171" data-href="http://it-hype.com">
       </div></header>
-    <section class="u-align-center u-clearfix u-section-1" id="sec-3c82">
+    <section class="u-align-center u-clearfix u-white u-section-1" id="sec-3c82">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center u-text u-text-default u-text-1"> Удаление данных пользователя</h1>
       </div>
