--- a/Home.html
+++ b/Home.html
@@ -26,13 +26,13 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-align-left u-border-2 u-border-grey-90 u-clearfix u-grey-90 u-header u-header" id="sec-f35c"><div class="u-clearfix u-sheet u-sheet-1">
+        <img class="u-align-left u-image u-image-default u-image-1" src="images/LOGOTYPE21.png" alt="" data-image-width="266" data-image-height="171" data-href="http://it-hype.com">
         <nav class="u-align-right u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XS">
           <div class="menu-collapse" style="font-size: 1.125rem; letter-spacing: 0px; font-weight: 700;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="#" style="background-image: none;">
-              <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
-              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
-</symbol>
-</defs></svg>
+            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-text-white" href="#" style="height: 26px; color: rgb(17, 17, 17) !important;">
+              <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 124 124" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-10d5"></use></svg>
+              <svg class="u-svg-content" viewBox="0 0 124 124" x="0px" y="0px" id="svg-10d5" style="enable-background:new 0 0 124 124;"><g><path d="M112,6H12C5.4,6,0,11.4,0,18s5.4,12,12,12h100c6.6,0,12-5.4,12-12S118.6,6,112,6z"></path><path d="M112,50H12C5.4,50,0,55.4,0,62c0,6.6,5.4,12,12,12h100c6.6,0,12-5.4,12-12C124,55.4,118.6,50,112,50z"></path><path d="M112,94H12c-6.6,0-12,5.4-12,12s5.4,12,12,12h100c6.6,0,12-5.4,12-12S118.6,94,112,94z"></path>
+</g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
@@ -50,11 +50,10 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <img class="u-align-left u-image u-image-default u-image-1" src="images/LOGOTYPE21.png" alt="" data-image-width="266" data-image-height="171" data-href="http://it-hype.com">
       </div></header>
     <section class="skrollable u-align-center u-clearfix u-grey-90 u-hidden-lg u-section-1" id="sec-a33b">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center u-text u-text-default u-text-white u-text-1">GAME DEVELOPMENT</h1>
+        <h1 class="u-align-center u-text u-text-default-xl u-text-white u-text-1">GAME DEVELOPMENT</h1>
       </div>
     </section>
     
