--- a/privacy.html
+++ b/privacy.html
@@ -29,7 +29,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-align-left u-border-2 u-border-grey-90 u-clearfix u-grey-90 u-header u-header" id="sec-f35c"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-align-left u-clearfix u-grey-90 u-header u-header" id="sec-f35c"><div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-align-left u-image u-image-default u-image-1" src="images/LOGOTYPE21.png" alt="" data-image-width="266" data-image-height="171" data-href="http://it-hype.com">
         <nav class="u-align-right u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XS">
           <div class="menu-collapse" style="font-size: 1.125rem; letter-spacing: 0px; font-weight: 700;">
